--- a/index.html
+++ b/index.html
@@ -3,12 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Curriculum cv</title>
 </head>
 <body>
-    <h1>Hello world</h1>
-    <h1>Juan Ernesto Valera Quiroz</h1>
-    <h1>31142120</h1>
-    <h1>seccion 2</h1>
+    <header class="header">
+        <h1>Juan Ernesto Valera Quiroz</h1>
+        <p>Estudiante de Ingeniería Informática</p>
+        <img src="lol.jpg" alt="">
+    </header>
+    <main>
+        <section class="section">
+            <article> Datos Personales:
+                Fecha de nacimiento:13/05/2005
+                Lugar de residencia:Calle Nicaragua n56, San Juan de los Morros, Guárico,Venezuela
+            </article>
+            <article>Redes sociales: Facebook: https://www.facebook.com/profile.php?id=100082054917325&mibextid=ZbWKwL</article>
+            <article>
+                Formacion académica:Unidad Educativa Nacional "Rafael Cabrera Malo"
+            </article>
+            <article>Experiencia laboral: 2020-2023 Diseño Grafico, 
+
+            </article>
+            <article>Habilidades y destrezas:
+                Conocimientos de python,
+                Ingenio,
+                Capacidad para resolver probelmas
+            </article>
+
+        </section>
+    </main>
 </body>
 </html>
