--- a/index.html
+++ b/index.html
@@ -34,4 +34,23 @@
         </section>
     </main>
 </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="loll.css">
+    <title>Formulario</title>
+  </head>
+  <body>
+    <section class="form-register">
+      <h4>Formulario</h4>
+      <input class="controls" type="text" name="nombres" id="nombres" placeholder="Ingrese su Nombre">
+      <input class="controls" type="text" name="apellidos" id="apellidos" placeholder="Ingrese su Apellido">
+      <input class="controls" type="email" name="correo" id="correo" placeholder="Ingrese su Correo">
+      <input class="botons" type="submit" value="Confirmar">
+
+    </section>
+  
+  </body>
+  
 </html>
